--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1,14 +1,3 @@
-/* ==========================================================================
-   #URL SHORTENER STYLES
-   ========================================================================== */
-
-/**
- *
- * Inheriting box sizing slightly better best-practice
- * https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
- *
- */
-
 html {
   box-sizing: border-box;
 }
@@ -19,26 +8,30 @@ html {
   padding: 0;
 }
 
-/* Custom Properties
-   ========================================================================== */
-
 :root {
   --blue: #46ACCA;
   --brown: #D49667;
   --red: #980100;
 }
 
-
-/* Body
-   ========================================================================== */
-
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.4;
 }
 
-/* Top Section
-   ========================================================================== */
+
+.main-container {
+  margin: 0 auto;
+  background-image: url("/assets/background-image.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  min-height: 100vh;
+  max-width: 1000px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
 
 .form-section, .result-section {
   width: 100%;
@@ -46,11 +39,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.form-section {
-  height: 400px;
-  border-bottom: 1px solid #ddd;
 }
 
 .page-title {
