--- a/src/public/style.css
+++ b/src/public/style.css
@@ -8,11 +8,6 @@ html {
   padding: 0;
 }
 
-:root {
-  --blue: #46ACCA;
-  --brown: #D49667;
-  --red: #980100;
-}
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -29,12 +24,12 @@ body {
   max-width: 1000px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
 }
 
 
 .form-section, .result-section {
   width: 100%;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -44,6 +39,7 @@ body {
 .page-title {
   margin-bottom: 30px;
   font-size: 70px;
+  color: white;
 }
 
 .submit-button {
@@ -57,7 +53,8 @@ body {
 
 .url-input {
   width: 100%;
-  border: 1px solid var(--blue);
+  border: 1px solid white;
+  border-radius: 10px;
   padding: 10px 15px;
   font-size: 20px;
   height: 45px;
@@ -69,10 +66,9 @@ body {
   height: 40px;
   font-size: 16px;
   font-weight: 700;
-  border: 1px solid var(--red);
-  background-color: var(--red);
   color: white;
-  box-shadow: 0 1px 1px rgba(0,0,0,.04);
+  border: 1px solid white;
+  background: rgba(0,0,0,0);
   border-radius: 5px;
   text-transform: uppercase;
   cursor: pointer;
@@ -81,19 +77,14 @@ body {
 }
 
 .result {
-  margin-top: 50px;
   max-width: 600px;
   width: 100%;
-  border: 1px solid #ddd;
   padding: 20px;
-  background-color: #553c2b;
-  border: 5px solid #553c2b;
-  border-radius: 5px;
   text-align: center;
 }
 .short-url {
   color: white;
-  font-size: 26px;
+  font-size: 16px;
   font-weight: bold;
   text-decoration: none;
 }
